feat: updating - spring boot version 2.7.16 - gradle 8.0.0 - java 17